Minor fixes, including derivation

--- a/main.tex
+++ b/main.tex
@@ -398,7 +398,7 @@ Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, su
 
 \section{Wedge Product and Perpendicularity}
 
-Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane, where the x is traditionally the horizontal, and y the vertical. Switch now x and y, so that x is now the vertical, and y is now the horizontal. Rotating the axis such that y is once again the vertical will orient the x-axis in the "negative" horizontal direction. You could say that this is a (-x)-y plane. It is thus impossible to go from a y-x plane to an x-y plane purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning x $\to$ x, or y $\to$ -y. Once that is done, the original x-y plane can be reached can be reached. The tool that combines k-vectors antisymmetrically is the \textbf{wedge product}.
+Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane, where the x is traditionally the horizontal, and y the vertical. Switch now x and y, so that x is now the vertical, and y is now the horizontal. Rotating the axis such that y is once again the vertical will orient the x-axis in the "negative" horizontal direction. You could say that this is a (-x)-y plane. It is thus impossible to go from a y-x plane to an x-y plane purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning x $\to$ -x, or y $\to$ -y. Once that is done, the original x-y plane can be reached can be reached. The tool that combines k-vectors antisymmetrically is the \textbf{wedge product}.
 
 \textbf{Need a picture. First an x-y plane, then changing to a y-x plane, then a rotation to a (-x)-y plane}
 
@@ -411,16 +411,16 @@ Consider the problem now of constructing surfaces, volumes, and their higher dim
 
 
 	
- This discussion of joining vectors together and the resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping the order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} linearly independent directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. As an example, consider the magnetic field $B$. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. $B$ is written out in component form as $B_1 e^1 + B_2 e^2 + B_3 e^3$, where each component is perpendicular to the other two. By saying that we will be keeping track of components using the directions tangent to the surface, what we mean is that instead of writing out $B$ as before, we will instead be writing it as $B_{23} e^2\wedge e^3 + B_{13} e^1\wedge e^3 + B_{12} e^1\wedge e^2$. This notation should bring to mind the electromagnetic field tensor, $F^{\mu\nu}$, the components of which are the electric field and the magnetic field. This is good, as it is this tensor that generalizes to curved spacetime and beyond. \footnote{ Another issue with the cross product is that it requires that angles be defined, from which come perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles requires geometric notions that we do not have defined, and are in fact not necessary for our purposes. This speaks to the generality of the tools we are  using, as in most introductory physics topics, such as classical mechanics and electromagnetism, the fact that you have angles and distances is considered a given, and almost fundamental. As we have seen so far, they clearly are not.  }
+ This discussion of joining vectors together and the resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping the order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} linearly independent directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. As an example, consider the magnetic field $B$. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. $B$ is written out in component form as $B^1 e_1 + B^2 e_2 + B^3 e_3$, where each component is perpendicular to the other two. By saying that we will be keeping track of components using the directions tangent to the surface, what we mean is that instead of writing out $B$ as before, we will instead be writing it as $B^{23} e_2\wedge e_3 + B^{13} e_1\wedge e_3 + B^{12} e_1\wedge e_2$. This notation should bring to mind the electromagnetic field tensor, $F_{\mu\nu}$, the components of which are the electric field and the magnetic field. This is good, as it is this tensor that generalizes to curved spacetime and beyond.\footnote{ Another issue with the cross product is that it requires that angles be defined, from which come perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles requires geometric notions that we do not have defined, and are in fact not necessary for our purposes. This speaks to the generality of the tools we are  using, as in most introductory physics topics, such as classical mechanics and electromagnetism, the fact that you have angles and distances is considered a given, and almost fundamental. As we have seen so far, they clearly are not.  } 
 
 
 
 
 
-Just as we can combine k-vectors to create vectors of higher rank, we can also decompose k-vectors into the wedge product of lower rank vectors. A paralellogram, for instance, can be decomposed into the two vectors that define its sides. A cube can be decomposed into the three vectors that define the vertex. And Just so with a general infinitesimal paralellepiped. It follows that we can express any k-vector as the wedge product of k 1-vectors. So, if we have $v^k \in V^k$, we can decompose it as $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k$, where each of the component vectors are in $V^1$. More concisely, this can be written in a product series form as $\wedge^k_{i=1} a^i$. Decomposing k-vectors as we pass them to k-forms, we can write $\omega_k(v^k) = \omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(\wedge^k_{i=1}a^i)$. Flipping the order of any of these products will introduce a minus in the overall product. Thus, we say that a k-form is an alternating function of k 1-vectors. 
+Just as we can combine k-vectors to create vectors of higher rank, we can also decompose k-vectors into the wedge product of lower rank vectors. A paralellogram, for instance, can be decomposed into the two vectors that define its sides. A cube can be decomposed into the three vectors that define the vertex. And just so with a general infinitesimal parallelepiped. It follows that we can express any k-vector as the wedge product of k 1-vectors. So, if we have $v^k \in V^k$, we can decompose it as $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k$, where each of the component vectors are in $V^1$. More concisely, this can be written in a product series form as $\wedge^k_{i=1} a^i$. Decomposing k-vectors as we pass them to k-forms, we can write $\omega_k(v^k) = \omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(\wedge^k_{i=1}a^i)$. Flipping the order of any of these products will introduce a minus in the overall product. We can make the wedge product on vectors redundant by imposing its condition of antisymmetry on the k-form itself, and writing the k 1-vectors in a list of arguments as $\omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(a^1, a^2, ..., a^k)$. Thus, we say that a k-form is an alternating function of k 1-vectors. 
 
 \begin{prop}
-	K-forms are alternating functions of k 1-vectors, meaning that if $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... a^i \wedge a^j ... \wedge a^k$, then $\omega_k(v^k) = \omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... a^i \wedge a^j ... \wedge a^k) = -\omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... a^j \wedge a^i ... \wedge a^k)$.
+	K-forms are alternating functions of k 1-vectors, meaning that if $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... a^i \wedge a^j ... \wedge a^k$, then $\omega_k(v^k) = \omega_k(a^1, a^2, a^3, ..., a^i, a^j, ..., a^k) = -\omega_k(a^1, a^2, a^3, ..., a^j, a^i, ..., a^k)$. 
 \end{prop}
 
 
@@ -447,20 +447,15 @@ Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X
 
 
 \begin{defn}
-	The \textbf{basis} of $V^1$ is a set of linearly independent directions such that any element in $V^k$ may be constructed using the basis vectors. In $\mathbb{R}^3$ using Cartesian coordinates, the basis vectors are equivalently $(e_1, e_2, e_3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. 
+	Given a coordinate system $Q$, the \textbf{basis vectors} of $V^1$ is the set of linearly independent directions along the coordinates such that any element in $V^1$ may be constructed using the basis vectors. In $\mathbb{R}^3$ using Cartesian coordinates, the basis vectors are equivalently $(e_1, e_2, e_3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. A basis vector given a vector component will return the displacement along that basis vector. 
 \end{defn}
-
-
 
 
 Forms will be dealt with in a similar way. Let $\omega$ be a covector and $dP$ be a vector. Then $\omega(dP)$ is a linear function of the coordinate differences along $dP$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial P} = \omega_i e^i$ where each $e^i$ is a basis covector, or \textbf{cobasis vector}. 
-\begin{defn}
-	The \textbf{cobasis} of $\Omega_1$ is a set of linearly independent directions such that any element in $\Omega_k$ may be constructed using the basis covectors. For a set of forms with underlying field $\mathbb{R}^3$, the cobasis may be written as $(e^1, e^2, e^3)$. 
-\end{defn}
 
-\begin{prop}
-	A basis vector $e_i$ and basis covector $e^j$ relate to each other as $e_ie^j = \delta^j_i$\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}.
-\end{prop}
+\begin{defn}
+	The \textbf{cobasis} of $\Omega_1$ is a set of linearly independent directions such that any element in $\Omega_k$ may be constructed using the basis covectors. For a set of forms with underlying field $\mathbb{R}^3$, the cobasis may be written as $(e^1, e^2, e^3)$. When a covector is given to a basis covector, we get the component of the covector along that direction. A basis vector $e_i$ and basis covector $e^j$ relate to each other as $e_ie^j = \delta^j_i$\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}.
+\end{defn}
  
 
 Putting everything together now, for vector dP and k-form $\omega$, $\omega(dP) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
@@ -475,11 +470,10 @@ Working in a space with specified coordinates allows us to solve real problems. 
 Nature does not come prepackaged with a specific, preferred coordinate system. It follows then that any coordinate system that we choose to impose on our system is ultimately changeable, and that our system can just as well be described with any number of coordinate systems. For instance, if we say that some object lies at point $P$ with respect to coordinate system $Q$, we can just as well say where it lies with respect to coordinate system $Q'$. 
 
 
+So, suppose we have a covector $\omega = \omega_i e^i$, where the covector components $\omega_i$ and basis $e^i$ are defined relative to coordinate system $Q$. Suppose now we have coordinate system $\hat{Q}$, relative to which the components and basis are $\hat{\omega}_j\hat{e}^j$. $\omega$ is invariant, but the components and the basis are not, and their exact form depends on the coordinate system we're using. To transform between $Q$ and $\hat{Q}$, we write \begin{gather}\omega = \omega_i e^i = \omega_i \frac{\partial x^i}{\partial P} = \omega_i \frac{\partial x^i}{\partial x'^j} \frac{\partial x'^j}{\partial x^i} \frac{\partial x^i}{\partial P}=  \omega_i \frac{\partial x^i}{\partial x'^j} \frac{\partial x'^j}{\partial P}  = \omega'_j \frac{\partial x'^j}{\partial P} = \omega'_j e'^j \end{gather} 
+More explicity and compactly, we have that the components of $\omega$ transform as \begin{gather}\omega'_j = \frac{\partial x^i}{\partial x'^j} \omega_i. \end{gather}
 
-So, suppose we have a covector $\omega = \omega_i e^i$, where the covector components $\omega_i$ and basis $e^i$ are defined relative to coordinate system $Q$. Suppose now we have coordinate system $Q'$, relative to which the components and basis are $\omega_je^j$. $\omega$ is invariant, but the components and the basis are not, and their exact form depends on the coordinate system we're using. To transform between $Q$ and $Q'$, we write \begin{gather}\omega = \omega_i e^i = \omega_i \frac{\partial x^i}{\partial P} = \omega_i \frac{\partial x^i}{\partial x'^j} \frac{\partial x'^j}{\partial P}  = \omega_j \frac{\partial x'^j}{\partial x^i}\frac{\partial x^i}{\partial P} = \omega_j \frac{\partial x'^j}{\partial P} = \omega_j e^j \end{gather} 
-More explicity and compactly, we have that the components of $\omega$ transform as \begin{gather}\omega_j = \frac{\partial x^i}{\partial x'^j} \omega_i. \end{gather}
-
-Components of vectors transform in similar ways. If we have that $v = v^i e_i$, then $v^i$ will transform as \begin{gather}v^j = v^i \frac{\partial x'^j}{\partial x^i} \end{gather} In general, an object that has such a relationship with objects in other coordinate systems are called \textbf{tensors}. 
+Components of vectors transform in similar ways. If we have that $v = v^i e_i$, then $v^i$ will transform as \begin{gather}v'^j = v^i \frac{\partial x'^j}{\partial x^i} \end{gather} In general, an object that has such a relationship with objects in other coordinate systems are called \textbf{tensors}. 
 
 
 
@@ -504,8 +498,8 @@ Another way of thinking of tensors that may mesh better with a mathematician's w
 	A tensor $T$ of rank [k n] $T: \Omega_k \times V^n \to \mathbb{R}$ is a multilinear map that takes a k-form (or k 1-forms) and an n-vector (or n 1-vectors) to $\mathbb{R}$. 
 \end{defn}
 
-From a mathematical perspective, this is entirely valid, and does not detract from solving problems in physics. Furthermore, it has the added bonus of emphasizing that k-forms and k-vectors are in a sense two sides of the same coin\footnote{Properly speaking, k-forms and k-vectors are \emph{dual} to each other}, neither occupying a preferred position as the operator or as the object being operated on. From a physical perspective, however, this has somewhat unfortunate implications. Recall that we motivated the discussion of covectors using force, and of vectors using infinitesimal displacement. Mathematically, we would be entirely within our rights to say that an infinitesimal displacement is a function on a force that produces work, rather than saying that the force is a function on an infinitesimal displacement that produces work. This is not a physically sensible approach, as it would imply treating momentum as a function, and force as a displacement, so we will be continuing to be emphasizing covectors and k-forms as being functions of vectors and k-vectors, while also using the transformation law as the defining characteristic of tensors.
-
+From a mathematical perspective, this is entirely valid, and does not detract from solving problems in physics. Furthermore, it has the added bonus of emphasizing that k-forms and k-vectors are in a sense two sides of the same coin\footnote{Properly speaking, k-forms and k-vectors are \emph{dual} to each other}, neither occupying a preferred position as the operator or as the object being operated on. From a physical perspective, however, this has somewhat unfortunate implications. Recall that we motivated the discussion of covectors using force, and of vectors using infinitesimal displacement. Mathematically, we would be entirely within our rights to say that an infinitesimal displacement is a function on a force that produces work, rather than saying that the force is a function on an infinitesimal displacement that produces work. This is not as physically intuitive, so we will be continuing to be emphasizing covectors and k-forms as being functions of vectors and k-vectors, while also using the transformation law as the defining characteristic of tensors.
+\textbf{ We could also say that there are things like covectors that aren't functions of infinitesimal displacements (such as conjugate momentum)}
 
 
 \section{Exterior Derivative and Stokes' Theorem}
